# wgs-report-tools

./: .gitattributes  .gitignore  LICENSE  README.md  alternative  get_descriptions.py  gwas_catalog_grouped.csv  merged_gwas_data.csv  merged_gwas_data_inner.csv  pygwas.py  pyproject.toml  test.html  test.ipynb  test.vcf
data/: .gitattributes  Description_not_coverad.csv  Description_not_found.csv  Ontology_not_covered.csv  gwas_catalog_grouped.csv  gwas_database.csv  gwas_database_with_description.csv  gwas_description_counts.csv  medaka.sorted.vcf
mapgwas.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pygwas/: __init__.py  cli.py  expand_replicate_chr.py  get_descriptions.py  pygwas.py
test/report/: GWAS_report.html
test/report/data/: in-house_report.csv  report_data.csv
tests/: test_import.py
